Working on mobile styling for league pages.

--- a/greens-fees.html
+++ b/greens-fees.html
@@ -78,7 +78,7 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rates-page-body">
+    <section class="rates-page-body mobile-padding">
       <div class="container">
         <div class="row">
           <!-- weekday fees table -->
