--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@
     </div>
     <!-- rts banner four end -->
 
-    <div
+    <section
       class="why-choose-us-working-process introduction-section rts-section-gap mobile-padding"
     >
       <div class="shape-top-right wow toBottomLeft">
         <img src="assets/images/svgs/checkered-lower.svg" alt="" />
       </div>
       <div class="container">
-        <div class="row g-5 justify-content-between">
+        <div
+          class="row g-5 justify-content-between flex-column-reverse flex-md-row"
+        >
           <div
             class="col-lg-6 pr--50 d-flex flex-column align-items-centered introduction-column wow fadeInUp"
             data-wow-offset="120"
@@ -201,7 +203,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Notices section start -->
     <section
@@ -221,7 +223,11 @@
         >
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
-              <a href="blog-details.html" class="thumbnail">
+              <a
+                href="https://form.jotform.com/200425860403142"
+                target="_blank"
+                class="thumbnail"
+              >
                 <div class="image-area">
                   <img
                     loading="lazy"
@@ -267,7 +273,7 @@
                     </div>
                     <hr class="mt-5" />
                     <p>
-                      Questions? Please, contact Chad Myers → (785) 539 - 1041.
+                      Questions? Please, contact Chad Myers → (785) 539-1041.
                     </p>
                   </div>
                   <div class="row link-bar flex-row">
@@ -293,7 +299,7 @@
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
-              <a href="blog-details.html" class="thumbnail">
+              <a href="pro-shop.html" class="thumbnail">
                 <div class="image-area">
                   <img
                     loading="lazy"
@@ -311,10 +317,7 @@
                     <hr />
                     <div class="specials">
                       <h6>This month's specials.</h6>
-                      <p class="p2">*1/2 price on all apparel!*</p>
-                      <p class="p2">*Golf Pride CPX Grips $6.50 each*</p>
-                      <p class="p2">*Golf Pride Microsuede Wrap $5.50 each*</p>
-                      <p>*While supplies last*</p>
+                      <p class="p2">*In stock shoes are 15% off!*</p>
                     </div>
                     <hr />
                   </div>
@@ -339,54 +342,14 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="single-blog-area-start">
-              <a href="blog-details.html" class="thumbnail">
-                <div class="image-area">
-                  <img
-                    loading="lazy"
-                    rel="preload"
-                    src="images/callaway-notice.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="inner-content-area d-flex">
-                  <div class="top-area">
-                    <h3 class="title animated fadeIn">Customize Your Dozens</h3>
-                    <h6>Buy three customized dozens, get one free!</h6>
-                    <p>
-                      Use the promo code
-                      <span class="highlighted">202557700</span>
-                      in this link and place your order. An $8 shipping charge
-                      will be added to each order.
-                    </p>
-                  </div>
-                  <div class="row link-bar flex-row">
-                    <div>Place your order</div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                        stroke="#999999"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
 
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
-              <a href="blog-details.html" class="thumbnail h-100">
+              <a
+                href="https://www.golfnations.com/central-links-golf/start/join/?cid=6861"
+                target="_blank"
+                class="thumbnail h-100"
+              >
                 <div class="image-area">
                   <img
                     loading="lazy"
@@ -435,7 +398,7 @@
     <!-- Notices section end -->
 
     <!-- table of hours -->
-    <section class="hours-table">
+    <section class="hours-table mobile-padding">
       <div class="container">
         <div class="row g-5">
           <div class="col-12 col-md-6">Facebook or events feed</div>
@@ -499,7 +462,7 @@
 
     <!-- businesses array start -->
     <section
-      class="solution-expertice-area rts-section-gap bg-solution sponsors-section"
+      class="solution-expertice-area rts-section-gap bg-solution sponsors-section mobile-padding"
     >
       <div class="container">
         <div class="row">
