--- a/membership-fees.html
+++ b/membership-fees.html
@@ -78,7 +78,7 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rates-page-body membership">
+    <section class="rates-page-body membership mobile-padding">
       <div class="container">
         <div class="row">
           <!-- standard membership fees table -->
@@ -344,7 +344,7 @@
     </section>
 
     <!-- sunflower trail section check it -->
-    <section class="sunflower-trail-page-body" id="sunflower-trail">
+    <section class="sunflower-trail-page-body mobile-padding" id="sunflower-trail">
       <div class="container">
         <div class="row">
           <div
