--- a/pro-shop.html
+++ b/pro-shop.html
@@ -81,7 +81,7 @@
     <section class="pro-shop-body">
       <div class="band-of-brands">
         <div class="container">
-          <div class="row justify-content-around">
+          <div class="row justify-content-around g-5 g-md-0">
             <img
               class="brand callaway wow fadeInUp col-6 col-sm-4"
               data-wow-offset="120"
@@ -115,16 +115,16 @@
       </div>
       <div class="container">
         <!-- <hr /> -->
-        <div class="row g-5 justify-content-between pt-4 lined-row">
-          <div class="col-5">
+        <div class="row g-5 justify-content-between pt-4 lined-row flex-column flex-md-row">
+          <div class="col-12 col-md-5">
             <p class="shop-note">
               The brands above are available in the golf shop. We can also
               order products from Taylor Made and Cleveland Golf.
             </p>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <div class="row justify-content-between g-5">
-              <div class="col-12 col-sm-5">
+              <div class="col-6 col-sm-5">
                 <div class="note-box">
                   <div class="note-brow">
                     <img
@@ -140,7 +140,7 @@
                   to get fitted today.
                 </div>
               </div>
-              <div class="col-12 col-sm-5">
+              <div class="col-6 col-sm-5">
                 <div class="note-box">
                   <div class="note-brow">
                     <img
@@ -153,7 +153,7 @@
                   clubs.
                 </div>
               </div>
-              <div class="col-12 col-sm-5">
+              <div class="col-6 col-sm-5">
                 <div class="note-box">
                   <div class="note-brow">
                     <img
@@ -171,7 +171,7 @@
                   Fitting Tool.
                 </div>
               </div>
-              <div class="col-12 col-sm-5">
+              <div class="col-6 col-sm-5">
                 <div class="note-box">
                   <div class="note-brow">
                     <img
@@ -195,11 +195,11 @@
       </div>
     </section>
 
-    <section class="pro-shop-body foot-joy">
+    <section class="pro-shop-body foot-joy ">
       <div class="container">
         <hr class="fj-hr"/>
         <div class="row g-5 justify-content-between pt-5">
-          <div class="col-2">
+          <div class="col-12 col-md-2 foot-joy-left">
             <img
               src="assets/images/logo/footjoy.png"
               class="foot-joy-logo"
@@ -207,7 +207,7 @@
             />
             <p class="shop-note">Select Footjoy in stock now!</p>
           </div>
-          <div class="col-9">
+          <div class="col-12 col-md-9">
             <div class="row g-5">
               <div class="col-6 col-sm-4">
                 <div class="note-box">
@@ -256,7 +256,7 @@
     </section>
 
     <section
-      class="rts-blog-area rts-section-gap position-relative homepage-notices mt-5"
+      class="rts-blog-area rts-section-gap position-relative homepage-notices pro-shop-notices mt-5"
     >
       <div class="container">
         <div
