--- a/mens-league.html
+++ b/mens-league.html
@@ -78,7 +78,7 @@
     </div>
     <!-- rts banner four end -->
 
-    <div class="rts-solution-area league-page-body league-page-body-mens">
+    <section class="rts-solution-area league-page-body league-page-body-mens mobile-padding">
       <div
         class="container wow fadeInUp"
         data-wow-offset="0"
@@ -355,7 +355,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- cta area start -->
     <section class="cta blonde">
