Meet the Staff page done.

--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,9 @@
     </div>
     <!-- rts banner four end -->
 
-    <div class="page-body contact-page-body">
+    <section class="page-body contact-page-body mobile-padding">
       <div class="container">
-        <div class="rts-location-contact-area pt--70">
+        <div class="rts-location-contact-area">
           <div class="container">
             <div class="row pb--90 g-5">
               <div class="col-lg-4 col-md-6 col-sm-12">
@@ -288,7 +288,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
+
     <section id="donation-request" class="sponsorship-cta">
       <div class="container">
         <div
