--- a/instruction.html
+++ b/instruction.html
@@ -80,14 +80,14 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="page-body instruction-page-body">
+    <section class="page-body instruction-page-body mobile-padding">
       <div
         class="container wow fadeInUp"
         data-wow-offset="120"
         data-wow-delay=".9s"
       >
         <div class="row g-5 justify-content-between pt-4 lined-row">
-          <div class="col-5">
+          <div class="col-12 col-md-5">
             <img
               class="pga-member-logo"
               src="assets/images/logo/pga-member-logo.svg"
@@ -118,7 +118,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <div class="row justify-content-between g-5">
               <div class="col-12 col-sm-6">
                 <div class="note-box">
