--- a/ladies-evening-league.html
+++ b/ladies-evening-league.html
@@ -78,8 +78,8 @@
     </div>
     <!-- rts banner four end -->
 
-    <div
-      class="rts-solution-area league-page-body league-page-body-ladies-evening"
+    <section
+      class="rts-solution-area league-page-body league-page-body-ladies-evening mobile-padding"
     >
       <div
         class="container wow fadeInUp"
@@ -343,7 +343,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- cta area start -->
     <section class="cta blonde">
