--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -80,9 +80,9 @@
     </div>
     <!-- rts banner four end -->
 
-    <div class="page-body meet-the-staff-page-body">
+    <section class="page-body meet-the-staff-page-body mobile-padding">
       <div class="container">
-        <div class="rts-location-contact-area pt--70">
+        <div class="rts-location-contact-area">
           <div class="container">
             <div class="row g-5">
               <div class="col-lg-4 col-md-6 col-sm-12">
@@ -211,9 +211,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <section class="page-body board">
+    <section class="page-body board mobile-padding">
       <div
         class="container wow fadeInUp"
         data-wow-offset="120"
@@ -278,7 +278,7 @@
       </div>
     </section>
 
-    <section id="join-the-team" class="page-body board join-the-team">
+    <section id="join-the-team" class="page-body board join-the-team mobile-padding">
       <div
         class="container wow fadeInUp"
         data-wow-offset="120"
