--- a/members-only-events.html
+++ b/members-only-events.html
@@ -80,10 +80,10 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rts-solution-area page-body members-only-events-page-body">
+    <section class="rts-solution-area page-body members-only-events-page-body mobile-padding">
       <div class="event-wrapper masters-event-wrapper">
         <div class="container">
-          <div class="row g-5">
+          <div class="row g-5 flex-column-reverse flex-lg-row">
             <div
               class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
               data-wow-offset="120"
@@ -121,7 +121,7 @@
               data-wow-offset="120"
               data-wow-delay="1s"
             >
-              <div class="thumbnail-top d-flex justify-content-end">
+              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
                 <div class="event-image-box masters">
                   <img
                     class="masters-logo"
@@ -130,7 +130,7 @@
                   />
                 </div>
                 <img
-                  class="event-image-main"
+                  class="event-image-main d-none d-lg-block"
                   src="images/bunker-shot.jpg"
                   alt=""
                 />
@@ -148,7 +148,7 @@
               data-wow-offset="120"
               data-wow-delay=".1s"
             >
-              <div class="thumbnail-top d-flex justify-content-start">
+              <div class="thumbnail-top d-flex justify-content-start ">
                 <div class="event-image-box match-play">
                   <img
                     class="match-play-logo"
@@ -157,7 +157,7 @@
                   />
                 </div>
                 <img
-                  class="event-image-main"
+                  class="event-image-main d-none d-lg-block"
                   src="images/lucky-shot.jpg"
                   alt=""
                 />
@@ -206,7 +206,7 @@
 
       <div class="event-wrapper fourth-wrapper">
         <div class="container">
-          <div class="row">
+          <div class="row flex-column-reverse flex-lg-row">
             <div
               class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
               data-wow-offset="120"
@@ -252,7 +252,7 @@
               data-wow-offset="120"
               data-wow-delay=".2s"
             >
-              <div class="thumbnail-top d-flex justify-content-end">
+              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
                 <div class="event-image-box fourth">
                   <img
                     class="fourth-flags"
@@ -261,7 +261,7 @@
                   />
                 </div>
                 <img
-                  class="event-image-main"
+                  class="event-image-main d-none d-lg-block"
                   src="images/golfer-under-blue-sky.jpg"
                   alt=""
                 />
@@ -281,7 +281,7 @@
             >
               <div class="thumbnail-top d-flex justify-content-start">
                 <img
-                  class="event-image-main"
+                  class="event-image-main d-none d-lg-block"
                   src="images/golfer-in-red.jpg"
                   alt=""
                 />
@@ -326,7 +326,7 @@
 
       <div class="event-wrapper club-championship-wrapper">
         <div class="container">
-          <div class="row">
+          <div class="row flex-column-reverse flex-lg-row">
             <div
               class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
               data-wow-offset="120"
@@ -366,7 +366,7 @@
               data-wow-offset="120"
               data-wow-delay=".2s"
             >
-              <div class="thumbnail-top d-flex justify-content-end">
+              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
                 <div class="event-image-box club-championship">
                   <img
                     class="club-championship-logo"
@@ -375,7 +375,7 @@
                   />
                 </div>
                 <img
-                  class="event-image-main"
+                  class="event-image-main d-none d-lg-block"
                   src="images/golfer-aiming.jpg"
                   alt=""
                 />
