--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -79,7 +79,7 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rts-solution-area page-body open-tournaments-page-body">
+    <section class="rts-solution-area page-body open-tournaments-page-body mobile-padding">
       <div
         class="container wow fadeInUp"
         data-wow-offset="0"
@@ -301,7 +301,7 @@
 
     <!-- sponsors section starts here -->
     <section
-      class="solution-expertice-area rts-section-gap bg-solution sponsors-section sponsors-section-on-open-tournaments-page"
+      class="solution-expertice-area rts-section-gap bg-solution sponsors-section sponsors-section-on-open-tournaments-page mobile-padding"
     >
       <div class="container">
         <div class="row">
