Swapped out Alte Haas font for Inter.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <div
       class="banner-four-area banner-four-bg rts-section-gap jarallax home-page"
     >
-      <!-- aerial photo of MariMack is quite dark - uncomment with lighter photo -->
-      <!-- <div class="overlay"></div> -->
+      <div class="overlay"></div>
       <div class="slider-wrapper">
         <div class="slider wow fadeIn" data-wow-delay=".7s">
           <div class="slide">
@@ -121,7 +120,11 @@
         </div>
       </div>
 
-      <div class="shape wow toBottomLeft" data-wow-offset="120">
+      <div
+        class="shape wow fadeInUp"
+        data-wow-offset="100"
+        data-wow-delay=".7s"
+      >
         <img src="assets/images/svgs/checkered-upper.svg" alt="" />
       </div>
     </div>
@@ -130,7 +133,11 @@
     <section
       class="why-choose-us-working-process introduction-section rts-section-gap mobile-padding"
     >
-      <div class="shape-top-right wow toBottomLeft">
+      <div
+        class="shape-top-right wow fadeInUp"
+        data-wow-offset="100"
+        data-wow-delay=".9s"
+      >
         <img src="assets/images/svgs/checkered-lower.svg" alt="" />
       </div>
       <div class="container">
