--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -225,17 +225,17 @@
           </div>
           <div class="col-12 col-sm-6">
             <ul class="board-list">
-              <li>Kevin Kenney, President - kkenney@ksu.edu</li>
-              <li>George Mummert, Vice President - gmummert@ymail.com</li>
-              <li>Sue Donnelly, Secretary (non board position)</li>
-              <li>Joe Harris, Treasurer (non board position)</li>
-              <li>Rob Berard - rob@berardcfo.com</li>
-              <li>Lucas Crabtree - lscrabtree02@gmail.com</li>
-              <li>Jason Lembright - crossfit785@gmail.com</li>
-              <li>Cameron Mott - cmott0210@gmail.com</li>
-              <li>Brenda Neel - bk_neel@yahoo.com</li>
-              <li>Mike Buchanan - mikebuchanan1960@gmail.com</li>
-              <li>Marlin Whitney - marlinwhitney1@yahoo.com</li>
+              <li><span class="b">Kevin Kenney</span>, President - kkenney@ksu.edu</li>
+              <li><span class="b">George Mummert</span>, Vice President - gmummert@ymail.com</li>
+              <li><span class="b">Sue Donnelly</span>, Secretary (non board position)</li>
+              <li><span class="b">Joe Harris</span>, Treasurer (non board position)</li>
+              <li><span class="b">Rob Berard</span> - rob@berardcfo.com</li>
+              <li><span class="b">Lucas Crabtree</span> - lscrabtree02@gmail.com</li>
+              <li><span class="b">Jason Lembright</span> - crossfit785@gmail.com</li>
+              <li><span class="b">Cameron Mott</span> - cmott0210@gmail.com</li>
+              <li><span class="b">Brenda Neel</span> - bk_neel@yahoo.com</li>
+              <li><span class="b">Mike Buchanan</span> - mikebuchanan1960@gmail.com</li>
+              <li><span class="b">Marlin Whitney</span> - marlinwhitney1@yahoo.com</li>
             </ul>
           </div>
         </div>
@@ -251,10 +251,10 @@
           </div>
           <div class="col-12 col-sm-6">
             <ul class="board-list">
-              <li>Lucas Crabtree, Building Committee Chair</li>
-              <li>George Mummert, Grounds and Greens Chair</li>
-              <li>Cameron Mott, Finance Committee Chair</li>
-              <li>Chad Myers, Tournament Committee Chair</li>
+              <li><span class="b">Lucas Crabtree</span>, Building Committee Chair</li>
+              <li><span class="b">George Mummert</span>, Grounds and Greens Chair</li>
+              <li><span class="b">Cameron Mott</span>, Finance Committee Chair</li>
+              <li><span class="b">Chad Myers</span>, Tournament Committee Chair</li>
             </ul>
           </div>
         </div>
@@ -270,8 +270,8 @@
           </div>
           <div class="col-12 col-sm-6">
             <ul class="board-list">
-              <li>Dan Hoffman, PGH CPA</li>
-              <li>Julie Calvin, PGH CPA</li>
+              <li><span class="b">Dan Hoffman</span>, PGH CPA</li>
+              <li><span class="b">Julie Calvin</span>, PGH CPA</li>
             </ul>
           </div>
         </div>
