--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div
         class="shape wow fadeInUp"
         data-wow-offset="100"
-        data-wow-delay=".7s"
+        data-wow-delay=".9s"
       >
         <img src="assets/images/svgs/checkered-upper.svg" alt="" />
       </div>
@@ -136,7 +136,7 @@
       <div
         class="shape-top-right wow fadeInUp"
         data-wow-offset="100"
-        data-wow-delay=".9s"
+        data-wow-delay="1.2s"
       >
         <img src="assets/images/svgs/checkered-lower.svg" alt="" />
       </div>
