Fixing missing DL link.

--- a/members-only-events.html
+++ b/members-only-events.html
@@ -80,7 +80,9 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="rts-solution-area page-body members-only-events-page-body mobile-padding">
+    <section
+      class="rts-solution-area page-body members-only-events-page-body mobile-padding"
+    >
       <div class="event-wrapper masters-event-wrapper">
         <div class="container">
           <div class="row g-5 flex-column-reverse flex-lg-row">
@@ -121,7 +123,9 @@
               data-wow-offset="120"
               data-wow-delay="1s"
             >
-              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
+              <div
+                class="thumbnail-top d-flex justify-content-start justify-content-lg-end"
+              >
                 <div class="event-image-box masters">
                   <img
                     class="masters-logo"
@@ -148,7 +152,7 @@
               data-wow-offset="120"
               data-wow-delay=".1s"
             >
-              <div class="thumbnail-top d-flex justify-content-start ">
+              <div class="thumbnail-top d-flex justify-content-start">
                 <div class="event-image-box match-play">
                   <img
                     class="match-play-logo"
@@ -252,7 +256,9 @@
               data-wow-offset="120"
               data-wow-delay=".2s"
             >
-              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
+              <div
+                class="thumbnail-top d-flex justify-content-start justify-content-lg-end"
+              >
                 <div class="event-image-box fourth">
                   <img
                     class="fourth-flags"
@@ -366,7 +372,9 @@
               data-wow-offset="120"
               data-wow-delay=".2s"
             >
-              <div class="thumbnail-top d-flex justify-content-start justify-content-lg-end">
+              <div
+                class="thumbnail-top d-flex justify-content-start justify-content-lg-end"
+              >
                 <div class="event-image-box club-championship">
                   <img
                     class="club-championship-logo"
@@ -389,14 +397,17 @@
     <section class="sponsorship-cta">
       <div class="container">
         <div class="row flex-column align-items-center text-center">
-       
           <h3>
             <span class="italicized">Reach out</span> for 2025 sponsorship
             opportunities.
           </h3>
-          <a href="#" class="rts-btn btn-primary btn-bold"
-            >Sponsorship Application</a
+          <a 
+          href="assets/pdfs/2025-Business-Membership-Application.pdf" 
+          class="rts-btn btn-primary btn-bold"
+          target="_blank"
           >
+            Sponsorship Application
+          </a>
         </div>
       </div>
     </section>
