Swapped member logos. Flipped order of news items on instruction page. Updated cart fees. Swapped Stagg Hill Member Guest Tournament picture.

--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -97,7 +97,7 @@
                     alt=""
                   />
                   <img
-                    class="staff-photo"
+                    class="staff-photo chad"
                     src="assets/images/staff/chad.jpg"
                     alt=""
                   />
@@ -164,7 +164,12 @@
                   data-wow-delay="1s"
                 >
                   <img
-                    class="staff-photo george"
+                    class="pga-memb-logo gcsaa"
+                    src="assets/images/logo/gcsaa-logo.png"
+                    alt=""
+                  />
+                  <img
+                    class="staff-photo justin"
                     src="assets/images/staff/justin.png"
                     alt=""
                   />
@@ -225,17 +230,37 @@
           </div>
           <div class="col-12 col-sm-6">
             <ul class="board-list">
-              <li><span class="b">Kevin Kenney</span>, President - kkenney@ksu.edu</li>
-              <li><span class="b">George Mummert</span>, Vice President - gmummert@ymail.com</li>
-              <li><span class="b">Sue Donnelly</span>, Secretary (non board position)</li>
-              <li><span class="b">Joe Harris</span>, Treasurer (non board position)</li>
+              <li>
+                <span class="b">Kevin Kenney</span>, President - kkenney@ksu.edu
+              </li>
+              <li>
+                <span class="b">George Mummert</span>, Vice President -
+                gmummert@ymail.com
+              </li>
+              <li>
+                <span class="b">Sue Donnelly</span>, Secretary (non board
+                position)
+              </li>
+              <li>
+                <span class="b">Joe Harris</span>, Treasurer (non board
+                position)
+              </li>
               <li><span class="b">Rob Berard</span> - rob@berardcfo.com</li>
-              <li><span class="b">Lucas Crabtree</span> - lscrabtree02@gmail.com</li>
-              <li><span class="b">Jason Lembright</span> - crossfit785@gmail.com</li>
+              <li>
+                <span class="b">Lucas Crabtree</span> - lscrabtree02@gmail.com
+              </li>
+              <li>
+                <span class="b">Jason Lembright</span> - crossfit785@gmail.com
+              </li>
               <li><span class="b">Cameron Mott</span> - cmott0210@gmail.com</li>
               <li><span class="b">Brenda Neel</span> - bk_neel@yahoo.com</li>
-              <li><span class="b">Mike Buchanan</span> - mikebuchanan1960@gmail.com</li>
-              <li><span class="b">Marlin Whitney</span> - marlinwhitney1@yahoo.com</li>
+              <li>
+                <span class="b">Mike Buchanan</span> -
+                mikebuchanan1960@gmail.com
+              </li>
+              <li>
+                <span class="b">Marlin Whitney</span> - marlinwhitney1@yahoo.com
+              </li>
             </ul>
           </div>
         </div>
@@ -251,10 +276,18 @@
           </div>
           <div class="col-12 col-sm-6">
             <ul class="board-list">
-              <li><span class="b">Lucas Crabtree</span>, Building Committee Chair</li>
-              <li><span class="b">George Mummert</span>, Grounds and Greens Chair</li>
-              <li><span class="b">Cameron Mott</span>, Finance Committee Chair</li>
-              <li><span class="b">Chad Myers</span>, Tournament Committee Chair</li>
+              <li>
+                <span class="b">Lucas Crabtree</span>, Building Committee Chair
+              </li>
+              <li>
+                <span class="b">George Mummert</span>, Grounds and Greens Chair
+              </li>
+              <li>
+                <span class="b">Cameron Mott</span>, Finance Committee Chair
+              </li>
+              <li>
+                <span class="b">Chad Myers</span>, Tournament Committee Chair
+              </li>
             </ul>
           </div>
         </div>
@@ -278,13 +311,15 @@
       </div>
     </section>
 
-    <section id="join-the-team" class="page-body board join-the-team mobile-padding">
+    <section
+      id="join-the-team"
+      class="page-body board join-the-team mobile-padding"
+    >
       <div
         class="container wow fadeInUp"
         data-wow-offset="120"
         data-wow-delay=".1s"
       >
-      
         <div class="row g-5 justify-content-between">
           <div class="col-12 col-sm-6">
             <h3>Join Our Team</h3>
@@ -380,6 +415,98 @@
       </svg>
     </div>
     <!-- progress area end -->
+
+    <!-- 🟡🟡🟡🟡🟡🟡 MOBILE MENU MARKUP START 🟡🟡🟡🟡🟡🟡 -->
+    <div id="side-bar" class="side-bar header-two" dir="ltr">
+      <button class="close-icon-menu" aria-label="footer_Button">
+        <i class="far fa-times"></i>
+      </button>
+      <div class="mobile-menu-main">
+        <nav class="nav-main mainmenu-nav mt--30">
+          <ul class="mainmenu metismenu" id="mobile-menu-active">
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Fees</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="greens-fees.html">Greens Fees</a></li>
+                <li><a href="membership-fees.html">Membership Fees</a></li>
+                <li>
+                  <a href="membership-fees.html#sunflower-trail"
+                    >Sunflower Trail</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="pro-shop.html" class="main">Pro Shop</a>
+            </li>
+
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Leagues</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="mens-league.html">Men's League</a></li>
+                <li><a href="womens-league.html">Women's League</a></li>
+                <li>
+                  <a href="ladies-evening-league.html">Ladies Evening League</a>
+                </li>
+                <li><a href="couples-league.html">Couples League</a></li>
+              </ul>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Tournaments</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="open-tournaments.html">Open Tournaments</a></li>
+                <li>
+                  <a href="members-only-events.html">Members Only Events</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="instruction.html" class="main">Instruction</a>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">About</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="meet-the-staff.html">Meet The Staff</a></li>
+                <li>
+                  <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
+                </li>
+                <li>
+                  <a href="contact.html#donation-requests">Donation Requests</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                href="book-tee-time.html"
+                class="rts-btn btn-primary my-btn sidebar-btn"
+              >
+                Book tee time
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  data-inject-url="http://127.0.0.1:5500/assets/images/service/icons/13.svg"
+                  class="injectable"
+                >
+                  <path
+                    d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                    stroke="#999999"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- mobile menu area end -->
+    </div>
 
     <script defer src="assets/js/plugins/jquery.js"></script>
     <script defer src="assets/js/vendor/waw.js"></script>
