--- a/book-tee-time.html
+++ b/book-tee-time.html
@@ -127,6 +127,98 @@
     </div>
     <!-- progress area end -->
 
+    <!-- 🟡🟡🟡🟡🟡🟡 MOBILE MENU MARKUP START 🟡🟡🟡🟡🟡🟡 -->
+    <div id="side-bar" class="side-bar header-two" dir="ltr">
+      <button class="close-icon-menu" aria-label="footer_Button">
+        <i class="far fa-times"></i>
+      </button>
+      <div class="mobile-menu-main">
+        <nav class="nav-main mainmenu-nav mt--30">
+          <ul class="mainmenu metismenu" id="mobile-menu-active">
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Fees</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="greens-fees.html">Greens Fees</a></li>
+                <li><a href="membership-fees.html">Membership Fees</a></li>
+                <li>
+                  <a href="membership-fees.html#sunflower-trail"
+                    >Sunflower Trail</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="pro-shop.html" class="main">Pro Shop</a>
+            </li>
+
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Leagues</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="mens-league.html">Men's League</a></li>
+                <li><a href="womens-league.html">Women's League</a></li>
+                <li>
+                  <a href="ladies-evening-league.html">Ladies Evening League</a>
+                </li>
+                <li><a href="couples-league.html">Couples League</a></li>
+              </ul>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Tournaments</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="open-tournaments.html">Open Tournaments</a></li>
+                <li>
+                  <a href="members-only-events.html">Members Only Events</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="instruction.html" class="main">Instruction</a>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">About</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="meet-the-staff.html">Meet The Staff</a></li>
+                <li>
+                  <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
+                </li>
+                <li>
+                  <a href="contact.html#donation-requests">Donation Requests</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                href="book-tee-time.html"
+                class="rts-btn btn-primary my-btn sidebar-btn"
+              >
+                Book tee time
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  data-inject-url="http://127.0.0.1:5500/assets/images/service/icons/13.svg"
+                  class="injectable"
+                >
+                  <path
+                    d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                    stroke="#999999"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- mobile menu area end -->
+    </div>
+
     <script defer src="assets/js/plugins/jquery.js"></script>
     <script defer src="assets/js/vendor/waw.js"></script>
     <script defer src="assets/js/vendor/jarallax.js"></script>
