--- a/instruction.html
+++ b/instruction.html
@@ -290,53 +290,6 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="single-blog-area-start">
-              <a
-                href="https://www.drivechipandputt.com/?utm_source=mailchimp&utm_medium=email&utm_campaign=2021_past_participants_registration_open"
-                target="_blank"
-                class="thumbnail"
-              >
-                <div class="image-area">
-                  <img
-                    loading="lazy"
-                    rel="preload"
-                    src="images/drive-chip-putt.png"
-                    alt=""
-                  />
-                </div>
-
-                <div class="inner-content-area d-flex">
-                  <div class="top-area">
-                    <h3 class="title animated fadeIn">Drive, Chip, & Putt</h3>
-                    <h6>Registration Now Open!</h6>
-                    <p>
-                      The 2025-26 season of qualifying for Drive, Chip and Putt
-                      tees off for boys and girls ages 7-15. Local qualifying
-                      begins May 2, 2025 at 357 sites nationwide.
-                    </p>
-                  </div>
-                  <div class="row link-bar flex-row">
-                    <div>Sign up and join the fun today!</div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                        stroke="#999999"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
 
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
@@ -372,6 +325,54 @@
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Click here for more info!</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
+              <a
+                href="https://www.drivechipandputt.com/?utm_source=mailchimp&utm_medium=email&utm_campaign=2021_past_participants_registration_open"
+                target="_blank"
+                class="thumbnail"
+              >
+                <div class="image-area">
+                  <img
+                    loading="lazy"
+                    rel="preload"
+                    src="images/drive-chip-putt.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="inner-content-area d-flex">
+                  <div class="top-area">
+                    <h3 class="title animated fadeIn">Drive, Chip, & Putt</h3>
+                    <h6>Registration Now Open!</h6>
+                    <p>
+                      The 2025-26 season of qualifying for Drive, Chip and Putt
+                      tees off for boys and girls ages 7-15. Local qualifying
+                      begins May 2, 2025 at 357 sites nationwide.
+                    </p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Sign up and join the fun today!</div>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
@@ -430,6 +431,98 @@
       </svg>
     </div>
     <!-- progress area end -->
+
+    <!-- 🟡🟡🟡🟡🟡🟡 MOBILE MENU MARKUP START 🟡🟡🟡🟡🟡🟡 -->
+    <div id="side-bar" class="side-bar header-two" dir="ltr">
+      <button class="close-icon-menu" aria-label="footer_Button">
+        <i class="far fa-times"></i>
+      </button>
+      <div class="mobile-menu-main">
+        <nav class="nav-main mainmenu-nav mt--30">
+          <ul class="mainmenu metismenu" id="mobile-menu-active">
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Fees</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="greens-fees.html">Greens Fees</a></li>
+                <li><a href="membership-fees.html">Membership Fees</a></li>
+                <li>
+                  <a href="membership-fees.html#sunflower-trail"
+                    >Sunflower Trail</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="pro-shop.html" class="main">Pro Shop</a>
+            </li>
+
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Leagues</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="mens-league.html">Men's League</a></li>
+                <li><a href="womens-league.html">Women's League</a></li>
+                <li>
+                  <a href="ladies-evening-league.html">Ladies Evening League</a>
+                </li>
+                <li><a href="couples-league.html">Couples League</a></li>
+              </ul>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">Tournaments</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="open-tournaments.html">Open Tournaments</a></li>
+                <li>
+                  <a href="members-only-events.html">Members Only Events</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="instruction.html" class="main">Instruction</a>
+            </li>
+            <li class="has-droupdown">
+              <a href="#" class="main" aria-expanded="false">About</a>
+              <ul class="submenu mm-collapse">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="meet-the-staff.html">Meet The Staff</a></li>
+                <li>
+                  <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
+                </li>
+                <li>
+                  <a href="contact.html#donation-requests">Donation Requests</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                href="book-tee-time.html"
+                class="rts-btn btn-primary my-btn sidebar-btn"
+              >
+                Book tee time
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  data-inject-url="http://127.0.0.1:5500/assets/images/service/icons/13.svg"
+                  class="injectable"
+                >
+                  <path
+                    d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                    stroke="#999999"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- mobile menu area end -->
+    </div>
 
     <script defer src="assets/js/plugins/jquery.js"></script>
     <script defer src="assets/js/vendor/waw.js"></script>
