--- a/contact.html
+++ b/contact.html
@@ -200,8 +200,6 @@
             <div class="col-lg-12">
               <form
                 class="contact-form"
-                action="mailer.php"
-                method="post"
                 id="contact-form"
               >
                 <div class="half-input-wrapper">
@@ -249,20 +247,7 @@
                     required=""
                   ></textarea>
                 </div>
-                <!-- <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    value="1"
-                    id="defaultCheck1"
-                    name="agree"
-                    required=""
-                  />
-                  <label class="form-check-label" for="defaultCheck1">
-                    You agree to our friendly privacy policy.
-                  </label>
-                </div> -->
-                <button type="submit" class="rts-btn btn-primary">
+                <button id="button" type="submit" class="rts-btn btn-primary">
                   Send message
                   <svg
                     width="32"
@@ -457,10 +442,21 @@
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
     <script defer src="assets/js/plugins/metismenu.js"></script>
-    <script defer src="assets/js/vendor/contact-form.js"></script>
+    <!-- <script defer src="assets/js/vendor/contact-form.js"></script> -->
     <script defer src="assets/js/vendor/bootstrap.min.js"></script>
 
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
+
+    <!-- form handlers -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script
+      defer
+      type="text/javascript"
+      src="./assets/js/contact-form-util.js "
+    ></script>
   </body>
 </html>
