--- a/contact.html
+++ b/contact.html
@@ -191,84 +191,91 @@
           data-wow-delay=".1s"
         >
           <div class="row">
-            <div class="col-lg-12">
-              <div class="text-center-title-bg-white">
+            <div class="col-lg-12"> 
+              <div class="text-center-title-bg-white text-center">
                 <h2 class="title">Get in touch</h2>
                 <p>We’d love to hear from you!</p>
               </div>
             </div>
             <div class="col-lg-12">
-              <form
-                class="contact-form"
-                id="contact-form"
-              >
-                <div class="half-input-wrapper">
+              <form class="contact-form" id="contact-form">
+                  <div class="message-sent-box">
+                  <div class="row text-center flex-column align-items-center">
+                    <div class="image-orb">
+                      <img src="assets/images/icons/message-sent.svg" alt="" />
+                    </div>
+
+                    <h4>Message sent!</h4>
+                  </div>
+                </div>
+                <div class="inputs-wrapper">
+                  <div class="half-input-wrapper">
+                    <div class="single">
+                      <label for="name">First name</label>
+                      <input
+                        type="text"
+                        id="name"
+                        name="first_name"
+                        placeholder=""
+                        required=""
+                      />
+                    </div>
+                    <div class="single">
+                      <label for="last">Last name</label>
+                      <input
+                        type="text"
+                        id="last"
+                        name="last_name"
+                        placeholder=""
+                        required=""
+                      />
+                    </div>
+                  </div>
                   <div class="single">
-                    <label for="name">First name</label>
+                    <label for="email">Email</label>
                     <input
-                      type="text"
-                      id="name"
-                      name="first_name"
+                      type="email"
+                      id="email"
+                      name="email"
                       placeholder=""
                       required=""
                     />
                   </div>
                   <div class="single">
-                    <label for="last">Last name</label>
-                    <input
-                      type="text"
-                      id="last"
-                      name="last_name"
+                    <label for="phone">Phone</label>
+                    <input type="text" id="phone" name="phone" placeholder="" />
+                  </div>
+                  <div class="single">
+                    <label for="message">Message</label>
+                    <textarea
+                      id="message"
+                      name="message"
                       placeholder=""
                       required=""
-                    />
+                    ></textarea>
                   </div>
+                  <button id="button" type="submit" class="rts-btn btn-primary">
+                    <span class="button-text">Submit</span>
+                    <svg
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      data-inject-url="https://html.themewant.com/luminos/assets/images/service/icons/13.svg"
+                      class="injectable"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </button>
                 </div>
-                <div class="single">
-                  <label for="email">Email</label>
-                  <input
-                    type="email"
-                    id="email"
-                    name="email"
-                    placeholder=""
-                    required=""
-                  />
-                </div>
-                <div class="single">
-                  <label for="phone">Phone</label>
-                  <input type="text" id="phone" name="phone" placeholder="" />
-                </div>
-                <div class="single">
-                  <label for="message">Message</label>
-                  <textarea
-                    id="message"
-                    name="message"
-                    placeholder=""
-                    required=""
-                  ></textarea>
-                </div>
-                <button id="button" type="submit" class="rts-btn btn-primary">
-                  Send message
-                  <svg
-                    width="32"
-                    height="32"
-                    viewBox="0 0 32 32"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    data-inject-url="https://html.themewant.com/luminos/assets/images/service/icons/13.svg"
-                    class="injectable"
-                  >
-                    <path
-                      d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                      stroke="#999999"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    ></path>
-                  </svg>
-                </button>
               </form>
-              <div id="form-messages"></div>
             </div>
           </div>
         </div>
