--- a/index.html
+++ b/index.html
@@ -748,8 +748,10 @@
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
     <script type="module" src="./assets/js/stacked-images.js "></script>
+
+    <!-- Bootstrap masonry script -->
     <script
-      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js?version=1"
+      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js?version=1?random=<?php echo uniqid(); ?>"
       integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
       crossorigin="anonymous"
       defer
